tests/baselines/reference/generatorInAmbientContext4.d.errors.txt
generatorInAmbientContext4.d.ts(2,14): error TS1221: Generators are not allowed in an ambient context.


==== generatorInAmbientContext4.d.ts (1 errors) ====
    declare module M {
        function *generator(): any;
                 ~
!!! error TS1221: Generators are not allowed in an ambient context.
    }